--- a/references.bib
+++ b/references.bib
@@ -515,5 +515,64 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Kingma_2014,
+   author = {{Kingma}, D.~P. and {Ba}, J.},
+    title = "{Adam: A Method for Stochastic Optimization}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1412.6980},
+ primaryClass = "cs.LG",
+ keywords = {Computer Science - Learning},
+     year = 2014,
+    month = dec,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1412.6980K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@article{Huang_2016,
+  author    = {Gao Huang and
+Yu Sun and
+               Zhuang Liu and
+               Daniel Sedra and
+               Kilian Q. Weinberger},
+  title     = {Deep Networks with Stochastic Depth},
+  journal   = {CoRR},
+  volume    = {abs/1603.09382},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1603.09382},
+  timestamp = {Sat, 02 Apr 2016 11:49:48 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/
+HuangSLSW16},
+  bibsource = {dblp computer science bibliography, http://
+dblp.org} }
 
+@misc{Chollet_2015,
+author = {François Chollet },
+title = {keras},
+year = {2015},
+publisher = {GitHub},
+journal = {GitHub repository},
+howpublished = {\url{https://github.com/fchollet/keras}}, commit = {5bcac37}
+}
+@MISC{Bastien_2012,
+        author = {Bastien, Fr{\'{e}}d{\'{e}}ric and Lamblin,
+Pascal and Pascanu, Razvan and Bergstra, James and Goodfellow,
+Ian J. and Bergeron, Arnaud and Bouchard, Nicolas and Bengio,
+Yoshua},
+         title = {Theano: new features and speed improvements},
+          year = {2012},
+  howpublished = {Deep Learning and Unsupervised Feature
+Learning NIPS 2012 Workshop},
+      abstract = {Theano is a linear algebra compiler that
+optimizes a user’s symbolically-specified
+mathematical computations to produce efficient low-level
+implementations. In
+this paper, we present new features and efficiency improvements
+to Theano, and
+benchmarks demonstrating Theano’s performance relative to
+Torch7, a recently
+introduced machine learning library, and to RNNLM, a C++ library
+targeted at
+￼￼￼
+recurrent neural networks.}
+}
 
