--- a/paper.tex
+++ b/paper.tex
@@ -168,13 +168,10 @@ We use a simple Gaussian random realization of the noise uncorrelated between pi
 \subsection{ground-based}
 \label{sec:sim-ground-based}
 
-For the ground-based images four bands where I, G, U and R.  The reference band was R.  For the challenge set 85\% images where made with purely simulated images as outlines above and the other 15\% used actual images taken from a preliminary sample of bright galaxies directly from the KiDS survey.  Lensed source images where added to these real images at the same rate as for the mock images,  in this case 50\%.  No attempt was made to match the halo masses to the observed galaxies in these cases.  These real images where added for more realism and so that, by comparing the results for real and mock images, we can evaluate how realistic our simulations are in this context.
+For the ground-based images four bands where I, G, U and R.  The reference band was R.  For the challenge set 85\% images where made with purely simulated images as outlines above and the other 15\% used actual images taken from a preliminary sample of bright galaxies directly from the KiDS survey.  Lensed source images where added to these real images at the same rate as for the mock images,  in this case 50\%.  No attempt was made to match the halo masses to the observed galaxies in these cases.  These real images where added for more realism and so that, by comparing the results for real and mock images, we can evaluate how realistic our simulations are in this context.  There were about number 160,000 of these stamps from KiDS.
 
-number of stamps
-
-The KiDS survey provided a representative PSF map in each band that was applied to all mock images.   The pixel size 
-in this case was 0.2~arcsec. 
-Weight maps for the KiDS images were also provided some of which have masked masked regions from remove stars, cosmic rays and bad pixels.  For the mock images the noise was simulated by adding normally distributed numbers with the variance given by the weight maps taken.  The weight maps where also randomly rotated and flipped.  This resulted in many of the images having large masked regions in them ($\sim$ ***** \%).
+The KiDS survey provided a representative PSF map in each band that was applied to all mock images.   The pixel size in this case was 0.2~arcsec. 
+Weight maps for the KiDS images were also provided some of which have masked regions from remove stars, cosmic rays and bad pixels.  For the mock images the noise was simulated by adding normally distributed numbers with the variance given by the weight maps taken.  The weight maps where also randomly rotated and flipped.  This resulted in many of the images having large masked regions in them.
 
 By chance one of the original KiDS images appears to have been a lens.  When an additional lensed source was added this made a double lens or "jackpot" lens.
 
