--- a/paper.tex
+++ b/paper.tex
@@ -50,6 +50,10 @@ Amit Tagore,$^7$
 Diego Tuccillo,$^{9,10}$
 \newauthor
 Santiago Velasco-Forero,$^{10}$
+Camille Avestruz,$^{11-13,\dagger}$
+Nan Li,$^{12-14}$
+Matthew Lightman,$^{15}$
+\newauthor
 and ?\\
 % List of institutions
 $^{1}$ Departimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gabetti 93/2, 4012 Bologna, Italy \\
@@ -62,6 +66,12 @@ $^{7}$ Jodrell Bank Centre for Astrophysics, School of Physics \& Astronomy, Uni
 $^{8}$ Laboratoire Lagrange, Universi\'{e} de Nice Sophia-Antipolis, Centre National de la Recherche Scientifique, Observatoire de la C\^{o}te d'Azur, \\ Parc Valrose, 06108 Nice, France \\
 $^{9}$ LERMA, Observatoire de Paris, CNRS, Universit\'e Paris Diderot, 61, Avenue de l'Observatoire F-75014, Paris, France \\
 $^{10}$ Centre for mathematical morphology, Mathematics and Systems department, MINES ParisTech, 35 rue Saint-Honore, Fontainebleau, France \\
+$^{11}${Enrico Fermi Institute, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
+$^{12}${Kavli Institute for Cosmological Physics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
+$^{13}${Department of Astronomy \& Astrophysics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
+$^{14}${High Energy Physics Division, Argonne National Laboratory, Lemont, IL 60439}\\
+$^{15}${JPMorgan Chase, Chicago, IL 60603 U.S.A.}\\
+$^\dagger${Provost's Postdoctoral Scholar at the University of Chicago}\\
 }
 
 \begin{document}
@@ -424,6 +434,46 @@ Our architecture converges with a classification accuracy of 91\% on the validat
  \label{Fig2_gamoclass}
 \end{figure}
 
+%-------------------------------------------------%
+\subsection{ALL Methodology (Avestruz, Li, Lightman}
+%-------------------------------------------------%
+
+We detail the ALL team methodology in \citet{avestruz_etal17}. The
+pipeline was originally developed to automatically classify strong
+lenses in mock Hubble Space Telescope and Large Synoptic Sky Telescope
+data generated with code described in \citet{li_etal16} and
+\citet{collett_15}.  We apply the same exact steps for the single-band
+data for Euclid, but modify the feature extraction step for the
+four-band KIDS data.  We summarize the steps below.
+
+We use tools from {\em Scikit-learn} \citep{pedregosa_etal12} and
+perform minimal image preprocessing. First, we replace masked pixels
+with the average of surrounding pixels, then enhance contrast in the
+image by taking the normalized log of pixel values.  The next step of
+our pipeline consists of a feature extraction stage, where our feature
+vector is a {\em histogram of oriented gradients} (HOG)
+\citep{dalalandtriggs_05} that quantifies edges in the image.  HOG has
+three main parameters that determine the binning and resolution of
+edges captured by the features.  The result is a one dimensional
+feature vector corresponding to the magnitude of oriented gradients
+across the image.  With the KIDS data, we extract a feature vector for
+each of the four bands and concatenate the vectors to create a final
+feature vector for each object that we use to train a model
+classifier.
+
+We use {\em Logistic Regression} (LR), a machine learning algorithm,
+to train a classifier model.  LR requires a parameter search over the
+regression coefficient, $C_{LogReg}$.  The parameters from both the
+feature extrator, HOG, and the linear classifier, LR, contain
+parameters that we optimize for peak model performance.  We use {\em
+  GridSearchCV} from {\em Scikit-learn} to select cross-validated
+parameters for HOG parameters and a subset of $C_{LogReg}$ values with
+20\% of the test images provided.  We then run a finer parameter
+search over $C_{LogReg}$, splitting the test images into 80\% training
+and and 20\% test to avoid overfitting the data.  We use the best
+parameters to then train the entire dataset for the final model
+classifier that we used to evaluate the competition data.
+
 \section{results}
 \label{sec:results}
 
@@ -628,6 +678,14 @@ RBM's research was partly part of project GLENCO, funded under the European Seve
 AT acknowledges receipt of an STFC postdoctoral research
 assistantship.
 \red{We thank the International Space Science Institute (ISSI) for hosting and funding our workshop.\footnote{http://www.issibern.ch/}}
+CA acknowledges support from the Enrico Fermi
+Institute at the University of Chicago, and the University of Chicago
+Provost's Office. NL would like to thank the funding support from
+NSFC, grant no.11503064, and Shanghai Natural Science Foundation,
+grant no. 15ZR1446700. This work was also supported in part by the
+Kavli Institute for Cosmological Physics at the University of Chicago
+through grant NSF PHY-1125897 and an endowment from the Kavli
+Foundation and its founder Fred Kavli.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%% REFERENCES %%%%%%%%%%%%%%%%%%
